# ai-slicer

./: .gitignore
.github/workflows/: build-windows.yml  release-tauri.yml
highlight_client/: PACKAGING.md  README.md  highlight-server.spec  package-lock.json  package.json  private_config.sample.json  requirements-build.txt  server.py  start_mac.sh  start_windows.bat
highlight_client/.github/workflows/: build-windows.yml
highlight_client/scripts/: build_app.sh  build_app_windows.bat  build_sidecar.py
highlight_client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
highlight_client/src-tauri/capabilities/: default.json
highlight_client/src-tauri/icons/: icon.icns
highlight_client/src-tauri/permissions/autogenerated/: install_update_if_available.toml
highlight_client/src-tauri/src/: lib.rs  main.rs
highlight_client/static/: app.js  index.html  styles.css
highlight_client/tauri-dist/: index.html
