[package]
name = "highlight-client"
version = "0.1.1"
description = "Local highlight video editor"
authors = ["Highlight Client"]
edition = "2021"

[lib]
name = "highlight_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde_json = "1"
